# rssettings

./: Cargo.toml  README.md
src/: lib.rs
test_files/: duplicated_key.ini  key_value_to_global.ini  missing_assign_tag.ini  missing_end_section_tag.ini  missing_key.ini  missing_start_section_tag.ini  no_section_name.ini  set_get_errors.ini  settings.ini
