[package]
name = "rssettings"
description = "A lib crate to manage .ini style settings file"
repository = "https://github.com/fstafforte/rssettings"
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
